# talia-lookup

./: .gitignore  README.md  RELEASING.md  bump-version.sh  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bubble.rs  lib.rs  main.rs
src/lib/: format.ts  recents.ts  toast.ts  types.ts
src/lib/components/: Avatar.svelte  Chip.svelte  ContractCard.svelte  MeetingRow.svelte  PillBadge.svelte  RecentRow.svelte  SessionCard.svelte  StatTile.svelte  StudentDetail.svelte  Toast.svelte  UserRow.svelte
src/routes/: +page.svelte
